solved overflow with scale transition

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
+html {
     text-align: center;
+}
+
+@layer base {
+    h1 {
+      @apply  dark:text-slate-200; 
+      @apply text-3xl;
+      @apply md:text-4xl;
+      @apply lg:text-5xl;
+      @apply py-1;
+      @apply font-bold;
+      @apply sm:mx-10;
+      @apply z-10;    
+    }
+    
 }
